--- a/index.html
+++ b/index.html
@@ -92,9 +92,29 @@
             color: hsl(0, 0%, 95%);
             border: 1.5px solid hsl(0, 0%, 95%);
         }
+        
+        .flex-btn {
+            width: 40px;
+            height: 40px;
+            border: 1px solid whitesmoke;
+            margin: 30px;
+            color: red;
+            padding: 3px;
+            background-color: whitesmoke;
+        }
+
+        .flex-btn p {
+            font-size: small;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
+     <div class="flex-btn">
+        <a href="https://otonyer.github.io/card-layout-grid/"><p>
+            Flex
+        </p></a>
+    </div>
     <div class="grid-container">
      <div class="sedan grid-item">
          <div>
