--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </head>
 <body>
      <div class="flex-btn">
-        <a href="https://otonyer.github.io/card-layout-grid/"><p>
+        <a href="https://otonyer.github.io/card-layout-flex/"><p>
             Flex
         </p></a>
     </div>
