--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             color: red;
             padding: 3px;
             background-color: whitesmoke;
+            cursor: pointer;
         }
 
         .flex-btn p {
@@ -111,7 +112,7 @@
 </head>
 <body>
      <div class="flex-btn">
-        <a href="https://otonyer.github.io/card-layout-flex/"><p>
+        <a style="text-decoration: none;" href="https://otonyer.github.io/card-layout-flex/"><p>
             Flex
         </p></a>
     </div>
