--- a/index.html
+++ b/index.html
@@ -111,11 +111,12 @@
     </style>
 </head>
 <body>
-     <div class="flex-btn">
-        <a style="text-decoration: none;" href="https://otonyer.github.io/card-layout-flex/"><p>
+    <a style="text-decoration: none;" href="https://otonyer.github.io/card-layout-flex/"> 
+    <div class="flex-btn">
+        <p>
             Flex
-        </p></a>
-    </div>
+        </p>
+    </div></a>
     <div class="grid-container">
      <div class="sedan grid-item">
          <div>
